--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 .imagen-pantalla-completa {
-  background-image: url('/img.png'); /* Reemplaza con la ruta de tu imagen */
+  background-image: url('./img.png'); /* Reemplaza con la ruta de tu imagen */
   background-size: auto 100%; /* Ajusta la altura al 100% y el ancho se ajusta automáticamente */
   background-position: center;
   background-repeat: no-repeat; /* Evita que la imagen se repita */
